Default squid categorias bloqueadas (ninguna)

--- a/resources/config/squid/blacklists.conf
+++ b/resources/config/squid/blacklists.conf
@@ -1,2 +1,2 @@
-acl porn-small dstdomain "/etc/squid/blacklists/porn-small.list"
-http_access deny porn-small
+# acl porn-small dstdomain "/etc/squid/blacklists/porn-small.list"
+# http_access deny porn-small
